Fixing floating button "jump"

--- a/src/sass/4-pages/_group.scss
+++ b/src/sass/4-pages/_group.scss
@@ -1,6 +1,6 @@
 .group {
     .tabs {
-        margin-top: -16px;
+        margin-top: 1px;
     }
 
     .tabs-content {
